sfac wolf lion upgrade

--- a/aartics/projects/wolflion/index.htm
+++ b/aartics/projects/wolflion/index.htm
@@ -140,145 +140,37 @@
     <div class="col-xs-12 col-md-4 itemblock-textholder">
       <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_problem_color.png"/>
       <p class="itemblock-sectiontitle-problem">problem synthesis</p>
-      <h1 class="itemblock-itemtitle">toward an m.v.p</h1>
-      <p class="itemblock-paragraph">As a team, we interviewed the client and summarized a starting M.V.P for the product as:</p>
-      <ul class="itemblock-list-ul">
-        <li class="itemblock-list-li">WHAT: Browser application + plug-in for email</li>
-        <li class="itemblock-list-li">WHO: Financial Startup Materketing</li>
-        <li class="itemblock-list-li">WHY: Improve tone of marketing content</li>
-      </ul>
-      <p class="itemblock-material"><a href="local_img/interview_with_client_resonate_aartics.pdf">CLICK FOR PDF OF INTERVIEW</a></p>
+      <h1 class="itemblock-itemtitle">project context</h1>
+      <p class="itemblock-paragraph">The client - The local SF pet store - Wolf &amp; Lion, wants to attract more customers to the store.</p>
+      <p class="itemblock-material">&nbsp;</p>
     </div>
     <div class="col-xs-12 col-md-8 itemblock-image-div">
       <div class="row itemblock-image-title-div">
-        <p class="itemblock-image-title">Excerpts from interview with Dhaval Bhatt, CEO of Resonate.ai:</p>
-        <img class="itemblock-image-img" src="local_img/resonate_interview.png"/>
+        <p class="itemblock-image-title">Project Context:</p>
+        <a href="https://invis.io/THAEZ03UR"><img class="itemblock-image-img" src="local_img/001.png"/></a>
       </div>
     </div>
     </div>
   </div>
   <div class="container-fluid itemblock">
     <div class="row">
-    <div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
-      <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_problem_color.png"/>
-      <p class="itemblock-sectiontitle-problem">problem synthesis</p>
-      <h1 class="itemblock-itemtitle">existing product usability testing</h1>
-      <p class="itemblock-paragraph">Usability testing on existing product led us to remove non measurable tones like "joy", "anticipation", and "popularity" from the existing product classifiers. We summarized the outcomes:</p>
+    <div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder" id="solution-1">
+      <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
+      <p class="itemblock-sectiontitle-solution">solution</p>
+      <h1 class="itemblock-itemtitle">innovative e-commerce for an online pet store experience</h1>
+      <p class="itemblock-paragraph">Some of the user experiences I proposed to engage and retain pet owners are:</p>
       <ul class="itemblock-list-ul">
-        <li class="itemblock-list-li">T.L.C: Identify and Infuse only Trust, Likability and Confidence for persuasion in inline content</li>
-        <li class="itemblock-list-li">USE DATA MINING ON FULL CONTENT ARC: Identify structural elements in overall content</li>
-        <li class="itemblock-list-li">ENABLE BRAND CUSTOMIZATION IN CONTENT: Train the algorithm to identify and infuse brand personalization in inline content</li>
+        <li class="itemblock-list-li">1. Allow clients to register their pets. This will give Wolf & Lion the opportunity to target product sales and services based on the age and nature of the pet.</li>
+        <li class="itemblock-list-li">2. Voice-activated re-ordering through Alexa's APIs</li>
+        <li class="itemblock-list-li">3. Allow the local community to get involved with events and clinics.</li>
+        <li class="itemblock-list-li">4. Have expert reviews for good products on the product details page. Additionally, scrape reviews for the product from other e-commerce site stocking the same product, so that users can have more information up-front without leaving the site.</li>
       </ul>
-      <p class="itemblock-material">&nbsp;</p>
+      <p class="itemblock-material"><a href="https://invis.io/THAEZ03UR">Click here to launch the <br>INVISION PROTOTYPE PRESENTATION.</a></p>
     </div>
     <div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div" id="existing-product-div">
       <div class="row itemblock-image-title-div">
-        <p class="itemblock-image-title">Screenshot of existing product:</p>
+        <p class="itemblock-image-title">Video of clickable wireframe prototype:</p>
         <img class="itemblock-image-img" id="resonate_before_img" src="local_img/res_before_01.png"/>
-      </div>
-    </div>
-    </div>
-  </div>
-  <div class="container-fluid itemblock">
-    <div class="row">
-    <div class="col-xs-12 col-md-4 itemblock-textholder">
-      <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_problem_color.png"/>
-      <p class="itemblock-sectiontitle-problem">problem synthesis</p>
-      <h1 class="itemblock-itemtitle">product strategy</h1>
-      <p class="itemblock-paragraph">We presented a product vision and strategy based on what the layers are of telling an effective story</p>
-      <p class="itemblock-material">&nbsp;</p>
-    </div>
-    <div class="col-xs-12 col-md-8 itemblock-image-div">
-      <div class="row itemblock-image-title-div">
-        <p class="itemblock-image-title">Product vision strategy:</p>
-        <img class="itemblock-image-img" id="product-vision-img" src="local_img/res_structural_change.png"/>
-      </div>
-    </div>
-    </div>
-  </div>
-    <div class="container-fluid itemblock">
-      <div class="row">
-      <div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder" id="solution-1">
-        <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
-        <p class="itemblock-sectiontitle-solution">solution discovery</p>
-        <h1 class="itemblock-itemtitle">product mockup video</h1>
-        <p class="itemblock-paragraph">As part of the final delivery, we made a video of the mockup of the product vision for resonate.ai for financial marketers</p>
-        <p class="itemblock-material">&nbsp;</p>
-      </div>
-      <div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
-        <div class="row itemblock-image-title-div">
-          <p class="itemblock-image-title">Video of product mockup:</p>
-            <video class="itemblock-image-img" autoplay controls loop>
-            <source src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/resonateai/img/resonate_editor_final.mp4" type="video/mp4">
-            </video>
-        </div>
-      </div>
-      </div>
-    </div>
-  <div class="container-fluid itemblock">
-    <div class="row">
-    <div class="col-xs-12 col-md-4 itemblock-textholder">
-      <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
-      <p class="itemblock-sectiontitle-solution">solution discovery</p>
-      <h1 class="itemblock-itemtitle">paper prototypes</h1>
-      <p class="itemblock-paragraph">We started with interactive paper prototypes to mimic product features which was used to identify and prioritize necessary features. It also led to further research on identifying classifiers.</p>
-      <p class="itemblock-material">&nbsp;</p>
-    </div>
-    <div class="col-xs-12 col-md-8 itemblock-image-div">
-      <div class="row itemblock-image-title-div">
-        <p class="itemblock-image-title">Photograph of paper prototype:</p>
-        <img class="itemblock-image-img" id="product-vision-img" src="local_img/resonate_paper_prototype.png"/>
-      </div>
-    </div>
-    </div>
-  </div>
-  <div class="container-fluid itemblock">
-    <div class="row">
-    <div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
-      <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
-      <p class="itemblock-sectiontitle-solution">solution discovery</p>
-      <h1 class="itemblock-itemtitle">rapid slides prototypes</h1>
-      <p class="itemblock-paragraph">We reiterated designs through low-fidelity clickable slides-based rapid prototypes for different personas to gather feedback and effectively communicate functional design details to the client.</p>
-      <p class="itemblock-material">&nbsp;</p>
-    </div>
-    <div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div" id="existing-product-div">
-      <div class="row itemblock-image-title-div">
-        <p class="itemblock-image-title">Screenshots of slides from rapid prototyping presentation:</p>
-        <img class="itemblock-image-img" src="local_img/res_more_prototyping.png"/>
-      </div>
-    </div>
-    </div>
-  </div>
-  <div class="container-fluid itemblock">
-    <div class="row">
-    <div class="col-xs-12 col-md-4 itemblock-textholder">
-      <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
-      <p class="itemblock-sectiontitle-solution">solution discovery</p>
-      <h1 class="itemblock-itemtitle">visual mockup of web application</h1>
-      <p class="itemblock-paragraph">We make mockups</p>
-      <p class="itemblock-material">&nbsp;</p>
-    </div>
-    <div class="col-xs-12 col-md-8 itemblock-image-div">
-      <div class="row itemblock-image-title-div">
-        <p class="itemblock-image-title">Mockup of web application with score detail:</p>
-        <img class="itemblock-image-img" src="local_img/visual_mockup.png"/>
-      </div>
-    </div>
-    </div>
-  </div>
-  <div class="container-fluid itemblock">
-    <div class="row">
-    <div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
-      <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
-      <p class="itemblock-sectiontitle-solution">solution discovery</p>
-      <h1 class="itemblock-itemtitle">mockup for email plugin</h1>
-      <p class="itemblock-paragraph">We made more mockups</p>
-      <p class="itemblock-material">&nbsp;</p>
-    </div>
-    <div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div" id="existing-product-div">
-      <div class="row itemblock-image-title-div">
-        <p class="itemblock-image-title">Mockup of inline email-based tone editor:</p>
-        <img class="itemblock-image-img" src="local_img/mail_plugin.png"/>
       </div>
     </div>
     </div>
@@ -288,65 +180,14 @@
     <div class="col-xs-12 col-md-4 itemblock-textholder">
       <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
       <p class="itemblock-sectiontitle-process">process</p>
-      <h1 class="itemblock-itemtitle">competitive and comparitive analysis</h1>
-      <p class="itemblock-paragraph">We studied inline suggesters and document composers:</p>
-      <ul class="itemblock-list-ul">
-        <li class="itemblock-list-li">BROWSER based apps: Textio, Grammarly, Boomerang, Medium, Crystal Knows</li>
-        <li class="itemblock-list-li">EMAIL based plugins: Grammarly, Boomerang</li>
-        <li class="itemblock-list-li">DOCUMENT composers: Sublime Text, Google slides, Microsoft Word, Microsoft Outlook</li>
-        <li class="itemblock-list-li">VOICE branding: MailChimp Voice Guide</li>
-      </ul>
-      <p class="itemblock-material">&nbsp;</p>
-    </div>
-    <div class="col-xs-12 col-md-8 itemblock-image-div">
-      <div class="row itemblock-image-title-div">
-        <p class="itemblock-image-title">Learning from existing products:</p>
-        <img class="itemblock-image-img" src="local_img/comp_analysis.png"/>
-      </div>
-    </div>
-    </div>
-  </div>
-  <div class="container-fluid itemblock">
-    <div class="row">
-    <div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
-      <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
-      <p class="itemblock-sectiontitle-process">process</p>
       <h1 class="itemblock-itemtitle">personas</h1>
-      <p class="itemblock-paragraph">We identified personas in Financial Startup Markets, and used these personas in prototypes to deliberate on features:</p>
-      <ul class="itemblock-list-ul">
-        <li class="itemblock-list-li">PATRICK: Junior Marketer</li>
-        <li class="itemblock-list-li">BRIAN: Patrick's boss</li>
-        <li class="itemblock-list-li">DANIEL: Founder</li>
-        <li class="itemblock-list-li">LIZ: Venture Capitalist</li>
-      </ul>
-      <p class="itemblock-material">&nbsp;</p>
-    </div>
-    <div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
-      <div class="row itemblock-image-title-div">
-        <p class="itemblock-image-title">Personas representing Financial Startups:</p>
-        <img class="itemblock-image-img" src="local_img/personas.png"/>
-      </div>
-    </div>
-    </div>
-  </div>
-  <div class="container-fluid itemblock">
-    <div class="row">
-    <div class="col-xs-12 col-md-4 itemblock-textholder">
-      <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
-      <p class="itemblock-sectiontitle-process">process</p>
-      <h1 class="itemblock-itemtitle">feature and user flow map</h1>
-      <p class="itemblock-paragraph">I generated a 'feature and user flow' map for developers to easily understand the complete product flows and scope the development efforts requried in engineering the product. </p>
-      <ul class="itemblock-list-ul">
-        <li class="itemblock-list-li">Heirarchy of all required features</li>
-        <li class="itemblock-list-li">Points of User and product interaction</li>
-        <li class="itemblock-list-li">Points of data collection</li>
-      </ul>
+      <p class="itemblock-paragraph">The wireframes and designs are based on personas - Jenny, Jason and Mary. They were were already decided as part of the project brief, and I used these personas to present the design details</p>
       <p class="itemblock-material">&nbsp;</p>
     </div>
     <div class="col-xs-12 col-md-8 itemblock-image-div">
       <div class="row itemblock-image-title-div">
-        <p class="itemblock-image-title">Detailed User and Structural Flow Map:</p>
-        <img class="itemblock-image-img" src="local_img/userflowmap.png"/>
+        <p class="itemblock-image-title">Personas:</p>
+        <img class="itemblock-image-img" src="local_img/wl_personas.png"/>
       </div>
     </div>
     </div>
@@ -356,31 +197,24 @@
     <div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
       <img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
       <p class="itemblock-sectiontitle-process">process</p>
-      <h1 class="itemblock-itemtitle">product roadmap</h1>
-      <p class="itemblock-paragraph">We Synthesized the complete research and ideas into a phase-wise product roadmap. This included creation of an clear vision and feature plan for an Enterprise version for the startup product:</p>
+      <h1 class="itemblock-itemtitle">system flow map</h1>
+      <p class="itemblock-paragraph">The map indicates the key product features and how they are connected to a user's flow and status:</p>
       <ul class="itemblock-list-ul">
-        <li class="itemblock-list-li">PHASE 1: Free Trial Product (M.V.P) with a Plugin and Web application</li>
-        <li class="itemblock-list-li">PHASE 2: Increased features in membership based model, which will store documents and edits</li>
-        <li class="itemblock-list-li">PHASE 3: Membership based product with story arc suggestions, with style and voice integrated</li>
-        <li class="itemblock-list-li">PHASE 4: Enterprise Application allowing role based privileges and collaboration</li>
+        <li class="itemblock-list-li">dfc</li>
+        <li class="itemblock-list-li">sd</li>
+        <li class="itemblock-list-li">sd</li>
+        <li class="itemblock-list-li">df</li>
       </ul>
-      <p class="itemblock-material">&nbsp;</p>
+      <p class="itemblock-material"><a href="https://invis.io/THAEZ03UR">Click here to launch the <br>INVISION PROTOTYPE PRESENTATION.</a></p>
     </div>
     <div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
       <div class="row itemblock-image-title-div">
-        <p class="itemblock-image-title">Product Roadmap:</p>
-        <img class="itemblock-image-img" src="local_img/productroadmap.png"/>
+        <p class="itemblock-image-title">System Map for new pet store experience for Wolf & Lion:</p>
+        <img class="itemblock-image-img" src="local_img/wl_sitemap.png"/>
       </div>
     </div>
     </div>
   </div>
-<!--  <div class="container-fluid no-padding">
-    <div class="row">
-      <div class="col-sm-12">
-        <img class="finish" src="local_img/001.png"/>
-      </div>
-    </div>
-  </div> -->
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-6 col-sm-6 col-md-2 footer-tile unoux">
