wolf lion materials added

--- a/aartics/projects/wolflion/index.htm
+++ b/aartics/projects/wolflion/index.htm
@@ -103,7 +103,7 @@
     </div>
     <div class="col-sm-8" id="heroimage">
 <!--      <img src="local_img/hero_resonate_3.png" id="heroimageimg"/> -->
-      <img src="local_img/res5.gif" id="heroimageimg"/>
+      <img src="local_img/wl_hero.gif" id="heroimageimg"/>
     </div>
     </div>
   </div>
@@ -170,7 +170,9 @@
     <div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div" id="existing-product-div">
       <div class="row itemblock-image-title-div">
         <p class="itemblock-image-title">Video of clickable wireframe prototype:</p>
-        <img class="itemblock-image-img" id="resonate_before_img" src="local_img/res_before_01.png"/>
+          <video class="itemblock-image-img" autoplay controls loop>
+            <source src="local_img/invision_recording.mov">
+          </video>
       </div>
     </div>
     </div>
