analytics added to mobile

--- a/aartics/m/index.htm
+++ b/aartics/m/index.htm
@@ -14,6 +14,16 @@
     <style>
       @import url('https://fonts.googleapis.com/css?family=ABeeZee');
     </style>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-104959516-1', 'auto');
+  ga('send', 'pageview');
+
+    </script>
 </head>
 <body>
     <header>
@@ -27,11 +37,11 @@
     </ul>
     </header>
     <div class="aarticslogo">
-        <img id="logo" width="80px" src="aartics_icon.png"/>
+        <img id="logo" width="80px" src="aartics_icon_v4_white.png"/>
     </div>
     <div class="child3" id="about">
         <h1>hello world, i'm aarti...</h1>
-        <p>I'm a UX Designer + Engineer.<br> I'm bringing together my past experience in architecture and software engineering </br>to build new futures.<br> I'm passionate about mixed realities, <br>and I embrace complexity.</p>
+        <p>I'm a UX Designer + Engineer.<br> I'm bringing together my past experience in architecture and software engineering </br>to build new futures.<br></p>
         <div class="logowrapper">
           <a href="aartics_resume.pdf" class="logoc"><img src="img/resume.png"/></a>
           <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="img/linkedin.png"/></a>
