all draft content in

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -404,7 +404,7 @@
   <g id="credits_box" data-attach="#c1" class="attached">
       <polygon id="c1" class="cls-2" points="3647.5 378.97 3498.56 636.95 3200.22 636.57 3050.84 378.78 3200.22 121 3498.56 121 3647.5 378.97"/>
       <text x="3000" y="140" data-x-rel="-420" class="creds" id="credabme">about me:</text>
-      <text x="3000" y="180" data-x-rel="-420" class="creds">i'm aarti c sharma, a designer/engineer.</text>
+      <text x="3000" y="180" data-x-rel="-420" class="creds">i'm aarti c sharma, a designer and engineer.</text>
       <text x="3000" y="220" data-x-rel="-420" class="creds">i have over 5 years of design experience as an</text>
       <text x="3000" y="240" data-x-rel="-420" class="creds">architect, &amp; 3 years as a technical software engineer.</text>
       <text x="3000" y="260" data-x-rel="-420" class="creds">now i design UX for VR, and aspire to create new futures.</text>
