--- a/aartics/projects/assen/index.htm
+++ b/aartics/projects/assen/index.htm
@@ -115,21 +115,21 @@
 				<a href="#problem-1">		
 					<p class="boxtitle" id="problemtitle">problem</p>
 					<img id="problemsrc" src="../assets_v4/img/icon_problem.png"/>
-					<p class="introdesc" id="problemdesc">For my design portfolio, aartics.com I undertook making a 3D representation my project gallery, viewed as if in a VR/AR world.</p>
+					<p class="introdesc" id="problemdesc">The small town of Assen in The Netherlands is looking to densify the town center with the new station. This needs upgrading and revitalizing the main city boulevard also considering minimum changes to existing infrastructure.</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="solution">
 				<a href="#solution-1">
 					<p class="boxtitle" id="solutiontitle">solution</p>
 					<img id="solutionsrc" src="../assets_v4/img/icon_solution.png"/>
-					<p class="introdesc" id="solutiondesc">Imagining new media futures.</p>
+					<p class="introdesc" id="solutiondesc">Adding strategic new program and projects along the main city corridor, densifying commercial spaces and widening the boulevard while re-ordering private and public transport.</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="process">
 				<a href="#process-1">
 					<p class="boxtitle" id="processtitle">process</p>
 					<img id="processsrc" src="../assets_v4/img/icon_process.png"/>
-					<p class="introdesc" id="processdesc"> Research  &nbsp;&nbsp;|&nbsp;&nbsp;  Wireframe &nbsp;&nbsp;|&nbsp;&nbsp; Product Design &nbsp;&nbsp;|&nbsp;&nbsp; Prototype &nbsp;&nbsp;|&nbsp;&nbsp; Feature and User Flow Map &nbsp;&nbsp;|&nbsp;&nbsp; Interaction Design &nbsp;&nbsp;|&nbsp;&nbsp; Visual Design &nbsp;&nbsp;|&nbsp;&nbsp; Product Roadmap</p>
+					<p class="introdesc" id="processdesc">Masterplanning &nbsp; &nbsp;| &nbsp; &nbsp; Large scaled model making &nbsp; &nbsp;| &nbsp; &nbsp; Illustrative communication through plans and renders</p>
 				</a>
 			</div>
 		</div>
