--- a/aartics/projects/barcelona/index.htm
+++ b/aartics/projects/barcelona/index.htm
@@ -116,21 +116,21 @@
 				<a href="#problem-1">		
 					<p class="boxtitle" id="problemtitle">problem</p>
 					<img id="problemsrc" src="../assets_v4/img/icon_problem.png"/>
-					<p class="introdesc" id="problemdesc">For my design portfolio, aartics.com I undertook making a 3D representation my project gallery, viewed as if in a VR/AR world.</p>
+					<p class="introdesc" id="problemdesc">Barcelona has limited public space, awkwardly ditributed traffic on equal sized streets and parking frustrations leading to a lack in quality of space. Studying the city growth, layout and traffic dispersion, the challenge is to ideate over new plans and models of development that can drastically change the city to shape a new qualitiative future.</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="solution">
 				<a href="#solution-1">
 					<p class="boxtitle" id="solutiontitle">solution</p>
 					<img id="solutionsrc" src="../assets_v4/img/icon_solution.png"/>
-					<p class="introdesc" id="solutiondesc">Imagining new media futures.</p>
+					<p class="introdesc" id="solutiondesc">Combining city blocks in Barcelona to create "superblocks" that will isolate axes for public space and public transportation. We reordered traffic and proposed new bus routes to maximize efficiency while using the grid layout of the city.</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="process">
 				<a href="#process-1">
 					<p class="boxtitle" id="processtitle">process</p>
 					<img id="processsrc" src="../assets_v4/img/icon_process.png"/>
-					<p class="introdesc" id="processdesc"> Research  &nbsp;&nbsp;|&nbsp;&nbsp;  Wireframe &nbsp;&nbsp;|&nbsp;&nbsp; Product Design &nbsp;&nbsp;|&nbsp;&nbsp; Prototype &nbsp;&nbsp;|&nbsp;&nbsp; Feature and User Flow Map &nbsp;&nbsp;|&nbsp;&nbsp; Interaction Design &nbsp;&nbsp;|&nbsp;&nbsp; Visual Design &nbsp;&nbsp;|&nbsp;&nbsp; Product Roadmap</p>
+					<p class="introdesc" id="processdesc">Research &nbsp; &nbsp;| &nbsp; &nbsp; Illustrative mapping &nbsp; &nbsp;| &nbsp; &nbsp; Design development &nbsp; &nbsp;| &nbsp; &nbsp; Policy creation &nbsp; &nbsp;| &nbsp; &nbsp; Transportation planning</p>
 				</a>
 			</div>
 		</div>
