--- a/aartics/projects/karunavr/index.htm
+++ b/aartics/projects/karunavr/index.htm
@@ -112,26 +112,22 @@
 				<a href="#problem-1">		
 					<p class="boxtitle" id="problemtitle">problem</p>
 					<img id="problemsrc" src="../assets_v4/img/icon_problem.png"/>
-					<p class="introdesc" id="problemdesc">Our client Resonate.ai approached us with a machine learning algorithm 
-					that can suggest the "tone" of any content. 
-					Our challenge was to design a delightful experience for financial marketers to use the product.</p>
+					<p class="introdesc" id="problemdesc">Karuna Labs is releasing a Virtual-Reality application in HTC Vive for pain management to be used
+						by physical therapists and pain-inflicted patients. My challenge was to design and implement an in-app navigation and data-entry UI.</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="solution">
 				<a href="#solution-1">
 					<p class="boxtitle" id="solutiontitle">solution</p>
 					<img id="solutionsrc" src="../assets_v4/img/icon_solution.png"/>
-					<p class="introdesc" id="solutiondesc">We designed and delivered prototypes for an 
-					application which can make tone suggestions in a web-based document editor
-					and a plug-in for email applications. The feel, voice and tone for 
-					the product attempts to mimic Scarlett Johanssen's movie personalities.</p>
+					<p class="introdesc" id="solutiondesc">After several design iterations, I designed a vertical collapsible transparent toolbar with icons, which is overlaid on to the patient activity VR exercise scenes. This navigation system needed to be designed and developed in Unity 3D.</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="process">
 				<a href="#process-1">
 					<p class="boxtitle" id="processtitle">process</p>
 					<img id="processsrc" src="../assets_v4/img/icon_process.png"/>
-					<p class="introdesc" id="processdesc"> Research  &nbsp;&nbsp;|&nbsp;&nbsp;  Wireframe &nbsp;&nbsp;|&nbsp;&nbsp; Product Design &nbsp;&nbsp;|&nbsp;&nbsp; Prototype &nbsp;&nbsp;|&nbsp;&nbsp; Feature and User Flow Map &nbsp;&nbsp;|&nbsp;&nbsp; Interaction Design &nbsp;&nbsp;|&nbsp;&nbsp; Visual Design &nbsp;&nbsp;|&nbsp;&nbsp; Product Roadmap</p>
+					<p class="introdesc" id="processdesc">Requirement gathering &nbsp; &nbsp;| &nbsp; &nbsp; Information Architecture &nbsp; &nbsp;| &nbsp; &nbsp; Sketching &nbsp; &nbsp;| &nbsp; &nbsp; Prototyping &nbsp; &nbsp;| &nbsp; &nbsp; Mockups in Sketch &nbsp; &nbsp;| &nbsp; &nbsp; Mockups in SketchUP &nbsp; &nbsp;| &nbsp; &nbsp; Human models in Blender &nbsp; &nbsp;| &nbsp; &nbsp; Implementation in Unity3D</p>
 				</a>
 			</div>
 		</div>
