--- a/aartics/projects/mumbai/index.htm
+++ b/aartics/projects/mumbai/index.htm
@@ -115,21 +115,21 @@
 				<a href="#problem-1">		
 					<p class="boxtitle" id="problemtitle">problem</p>
 					<img id="problemsrc" src="../assets_v4/img/icon_problem.png"/>
-					<p class="introdesc" id="problemdesc">For my design portfolio, aartics.com I undertook making a 3D representation my project gallery, viewed as if in a VR/AR world.</p>
+					<p class="introdesc" id="problemdesc">The politician-builder lobby nexus is proposing to reclaim a large portion of Mumbai's ecologically critical wetlands for profit. My urban design dissertation dares to propose alternative futures.</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="solution">
 				<a href="#solution-1">
 					<p class="boxtitle" id="solutiontitle">solution</p>
 					<img id="solutionsrc" src="../assets_v4/img/icon_solution.png"/>
-					<p class="introdesc" id="solutiondesc">Imagining new media futures.</p>
+					<p class="introdesc" id="solutiondesc">A new form of urbanism in a special "Wetland Economic Zone W.E.Z" in Mumbai which included: 1. Using the topography of the land to harvest water and prevent flooding. 2. Start new forms of productive landscapes with the wetlands instead of destroying them. 3. A new bridge across the bay to connect Mumbai and Navi Mumbai.</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="process">
 				<a href="#process-1">
 					<p class="boxtitle" id="processtitle">process</p>
 					<img id="processsrc" src="../assets_v4/img/icon_process.png"/>
-					<p class="introdesc" id="processdesc"> Research  &nbsp;&nbsp;|&nbsp;&nbsp;  Wireframe &nbsp;&nbsp;|&nbsp;&nbsp; Product Design &nbsp;&nbsp;|&nbsp;&nbsp; Prototype &nbsp;&nbsp;|&nbsp;&nbsp; Feature and User Flow Map &nbsp;&nbsp;|&nbsp;&nbsp; Interaction Design &nbsp;&nbsp;|&nbsp;&nbsp; Visual Design &nbsp;&nbsp;|&nbsp;&nbsp; Product Roadmap</p>
+					<p class="introdesc" id="processdesc">Research &nbsp; &nbsp;| &nbsp; &nbsp; Illustrative mapping &nbsp; &nbsp;| &nbsp; &nbsp; Design development using CAD and SketchUP &nbsp; &nbsp;| &nbsp; &nbsp; Policy creation</p>
 				</a>
 			</div>
 		</div>
