--- a/aartics/projects/resonateai/index.htm
+++ b/aartics/projects/resonateai/index.htm
@@ -288,7 +288,7 @@
 		<div class="col-xs-12 col-md-4 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
-			<h1 class="itemblock-itemtitle">competitive and comparitive analysis</h1>
+			<h1 class="itemblock-itemtitle">competitive and comparative analysis</h1>
 			<p class="itemblock-paragraph">We studied inline suggesters and document composers:</p>
 			<ul class="itemblock-list-ul">
 				<li class="itemblock-list-li">BROWSER based apps: Textio, Grammarly, Boomerang, Medium, Crystal Knows</li>
