--- a/aartics/projects/wolflion/index.htm
+++ b/aartics/projects/wolflion/index.htm
@@ -113,23 +113,21 @@
         <a href="#problem-1">   
           <p class="boxtitle" id="problemtitle">problem</p>
           <img id="problemsrc" src="../assets_v4/img/icon_problem.png"/>
-          <p class="introdesc" id="problemdesc">Our client Resonate.ai approached us with a machine learning algorithm 
-          that can suggest the "tone" of any content. Our challenge was to design a delightful experience for financial marketers to use the product.</p>
+          <p class="introdesc" id="problemdesc">Wolf &amp; Lion is a local SF pet store and they want to expand their website, online presence and product sales which can also result in an increase in store footfalls.</p>
         </a>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="solution">
         <a href="#solution-1">
           <p class="boxtitle" id="solutiontitle">solution</p>
           <img id="solutionsrc" src="../assets_v4/img/icon_solution.png"/>
-          <p class="introdesc" id="solutiondesc">We designed and delivered prototypes for an application which can make tone suggestions in a web-based document editor
-          and a plug-in for email applications. The feel, voice and tone for the product attempts to mimic Scarlett Johanssen's movie personalities.</p>
+          <p class="introdesc" id="solutiondesc">A unique online pet store experience with features such as 1. Product and deal suggestions based on knowing your pet personally. 2. Gathering scraped reviews for products so users can making a buying decision without leaving the site 3. Access to store clinic personnel through site portal. 4. Quick reordering flow. 5. Voice-based ordering on mobile and desktop.</p>
         </a>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="process">
         <a href="#process-1">
           <p class="boxtitle" id="processtitle">process</p>
           <img id="processsrc" src="../assets_v4/img/icon_process.png"/>
-          <p class="introdesc" id="processdesc"> Research  &nbsp;&nbsp;|&nbsp;&nbsp;  Wireframe &nbsp;&nbsp;|&nbsp;&nbsp; Product Design &nbsp;&nbsp;|&nbsp;&nbsp; Prototype &nbsp;&nbsp;|&nbsp;&nbsp; Feature and User Flow Map &nbsp;&nbsp;|&nbsp;&nbsp; Interaction Design &nbsp;&nbsp;|&nbsp;&nbsp; Visual Design &nbsp;&nbsp;|&nbsp;&nbsp; Product Roadmap</p>
+          <p class="introdesc" id="processdesc">Competitive and Comparative Analyses &nbsp; &nbsp;| &nbsp; &nbsp; Sketches &nbsp; &nbsp;| &nbsp; &nbsp; Wireframes &nbsp; &nbsp;| &nbsp; &nbsp; Clickable Prototypes</p>
         </a>
       </div>
     </div>
@@ -202,10 +200,9 @@
       <h1 class="itemblock-itemtitle">system flow map</h1>
       <p class="itemblock-paragraph">The map indicates the key product features and how they are connected to a user's flow and status:</p>
       <ul class="itemblock-list-ul">
-        <li class="itemblock-list-li">dfc</li>
-        <li class="itemblock-list-li">sd</li>
-        <li class="itemblock-list-li">sd</li>
-        <li class="itemblock-list-li">df</li>
+        <li class="itemblock-list-li">1. Be able to have consistent experience across devices for features</li>
+        <li class="itemblock-list-li">2. Clarity about feature dependencies before and during development</li>
+        <li class="itemblock-list-li">3. Become an aid for planning and testing user flows</li>
       </ul>
       <p class="itemblock-material"><a href="https://invis.io/THAEZ03UR">Click here to launch the <br>INVISION PROTOTYPE PRESENTATION.</a></p>
     </div>
