--- a/aartics/projects/sfac/index.htm
+++ b/aartics/projects/sfac/index.htm
@@ -113,23 +113,21 @@
 				<a href="#problem-1">		
 					<p class="boxtitle" id="problemtitle">problem</p>
 					<img id="problemsrc" src="../assets_v4/img/icon_problem.png"/>
-					<p class="introdesc" id="problemdesc">Our client Resonate.ai approached us with a machine learning algorithm 
-					that can suggest the "tone" of any content. Our challenge was to design a delightful experience for financial marketers to use the product.</p>
+					<p class="introdesc" id="problemdesc">Our challenge was to find ways to get citizens and visitors to be able to connect and engage with public art decisions of the San Francisco Arts Commission</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="solution">
 				<a href="#solution-1">
 					<p class="boxtitle" id="solutiontitle">solution</p>
 					<img id="solutionsrc" src="../assets_v4/img/icon_solution.png"/>
-					<p class="introdesc" id="solutiondesc">We designed and delivered prototypes for an application which can make tone suggestions in a web-based document editor
-					and a plug-in for email applications. The feel, voice and tone for the product attempts to mimic Scarlett Johanssen's movie personalities.</p>
+					<p class="introdesc" id="solutiondesc">We delivered a 3 part solution: 1. A public voting application that simply allowd users to vote "Like", "Maybe" or "Dislike" for random  public works of art. 2. A bendable, robust accessible stand what will be distributed across puclic space locations in the city. 3. An extension to the SFAC website that will allow moderated discussion and participation about current and future public art.</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="process">
 				<a href="#process-1">
 					<p class="boxtitle" id="processtitle">process</p>
 					<img id="processsrc" src="../assets_v4/img/icon_process.png"/>
-					<p class="introdesc" id="processdesc"> Research  &nbsp;&nbsp;|&nbsp;&nbsp;  Wireframe &nbsp;&nbsp;|&nbsp;&nbsp; Product Design &nbsp;&nbsp;|&nbsp;&nbsp; Prototype &nbsp;&nbsp;|&nbsp;&nbsp; Feature and User Flow Map &nbsp;&nbsp;|&nbsp;&nbsp; Interaction Design &nbsp;&nbsp;|&nbsp;&nbsp; Visual Design &nbsp;&nbsp;|&nbsp;&nbsp; Product Roadmap</p>
+					<p class="introdesc" id="processdesc"> Surveys &amp; interviews &nbsp; &nbsp;| &nbsp; &nbsp; Persona development &nbsp; &nbsp;| &nbsp; &nbsp; Comparative and competitive analyses &nbsp; &nbsp;| &nbsp; &nbsp; Rapid prototypes &nbsp; &nbsp;| &nbsp; &nbsp; Usability testing &nbsp; &nbsp;| &nbsp; &nbsp; High fidelity mockups</p>
 				</a>
 			</div>
 		</div>
