--- a/aartics/projects/karunavr/index.htm
+++ b/aartics/projects/karunavr/index.htm
@@ -138,7 +138,7 @@
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_problem_color.png"/>
 			<p class="itemblock-sectiontitle-problem">problem synthesis</p>
 			<h1 class="itemblock-itemtitle">requirements gathering</h1>
-			<p class="itemblock-paragraph">The existing menu categories were confusing</p>
+			<p class="itemblock-paragraph">The existing menu categories were confusing and my role began with trying to gather the requirements through interviews and brainstorming. I studied all the content of the previously existing menus (seen here in the screenshots) to make sure all the necessary functionality could be captured in my design. I made several iterations for the new information architecture. The requirements can be sumarized as:</p>
 			<ul class="itemblock-list-ul">
 				<li class="itemblock-list-li">WHAT: Design and develop a menu scene in Unity for navigating scenes for Karuna VR application</li>
 				<li class="itemblock-list-li">WHO: Physical Therapists + Pain inflicted patients</li>
